--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,6 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "query-string": "^7.0.0",
     "react": "^17.0.2",
@@ -44,12 +43,15 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/user-event": "^12.8.3",
     "eslint": "^7.26.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.23.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "sass": "^1.32.12"
-  }
+    "sass": "^1.32.12",
+    "sass-lint": "^1.13.1"
+  },
+  "sasslintConfig": "sass-lint.yml"
 }
